--- a/disco_blog/app/views/posts/index.html.erb
+++ b/disco_blog/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_tag render partial: 'eventstream', formats: [:js], locals: {event_id: @event_id} %>
 <h1>Listing posts</h1>
 
 <table>
