--- a/disco_blog/app/views/posts/show.html.erb
+++ b/disco_blog/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_tag render partial: 'eventstream', formats: [:js], locals: {event_id: @event_id} %>
 <p id="notice"><%= notice %></p>
 
 <p>
